Fixed  mergesort and implemented animations, dynamic window sizing, collapsable navbar, and added links to pages

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -9,3 +9,15 @@
   width: 3px;
   margin-right: 2px;
 }
+
+.navbar-collapse {
+  justify-content: center;
+}
+
+.links {
+  margin: 10px;
+}
+
+.select-buttons {
+  text-align: center;
+}
